# morq

./: .travis.yml  CNAME  Cargo.toml  LICENSE  README.md
src/: core.rs  grammar.rs  lib.rs
src/asserts/: close.rs  contain.rs  contains.rs  empty.rs  equal.rs  length_of.rs  mod.rs  not_equal.rs  result_check.rs  type_match.rs
tests/: bool.rs  close.rs  contain.rs  empty.rs  equal.rs  length_of.rs  not_equal.rs  result_check.rs  type_check.rs
